tests/neg/t7292-removal.scala
object OctalEscapes {
  val chr1 = '\0' // error
  val str1 = "abc\123456" // error
  val lf = '\012' // error
}
